Improved bugs & added some improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -35,7 +35,7 @@ commands:
     description: Замутить игрока
   privatemessage:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [сообщение]'
-    aliases: [ privatemessage, pm ]
+    aliases: [ privatemessage, pm, w, tell ]
     description: Отправь другому игроку приватное сообщение
   unmute:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname]'
