--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>github.minersStudios</groupId>
     <artifactId>msUtils</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
     <packaging>jar</packaging>
 
     <name>msUtils</name>
@@ -111,6 +111,20 @@
             <artifactId>discordsrv</artifactId>
             <version>1.25.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>github.minersStudios</groupId>
+            <artifactId>msDecor</artifactId>
+            <scope>system</scope>
+            <systemPath>C:/Users/Богдан/Documents/Miners Studios/WhoMine/msDecor/out/artifacts/msDecor_jar/msDecor.jar</systemPath>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>github.minersStudios</groupId>
+            <artifactId>msBlock</artifactId>
+            <scope>system</scope>
+            <systemPath>C:/Users/Богдан/Documents/Miners Studios/WhoMine/msBlock/out/artifacts/msBlock_jar/msBlock.jar</systemPath>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
