--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,8 @@ softdepend:
   - AuthMe
   - ProtocolLib
   - DiscordSRV
+  - msDecor
+  - msBlock
 
 commands:
   me:
@@ -35,7 +37,7 @@ commands:
     description: Замутить игрока
   privatemessage:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [сообщение]'
-    aliases: [ privatemessage, pm, w, tell ]
+    aliases: [ privatemessage, pm, w, tell, msg ]
     description: Отправь другому игроку приватное сообщение
   unmute:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname]'
@@ -65,6 +67,9 @@ commands:
     usage: ' ꀑ §cИспользуй: /<command> [ID]'
     permission: msUtils.info
     description: Выводит в чат информацию про игрока
+  crafts:
+    usage: ' ꀑ §cИспользуй: /<command>'
+    description: Открывает меню с крафтами кастомных предметов/декора/блоков
   whitelist:
     usage: ' ꀑ §cИспользуй: /<command> [add/remove/reload] [ID/Nickname]'
     permission: msUtils.whitelist
