--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
 			<url>https://jitpack.io</url>
 		</repository>
 		<repository>
-			<id>spigotmc-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+			<id>papermc</id>
+			<url>https://repo.papermc.io/repository/maven-public/</url>
 		</repository>
 		<repository>
 			<id>sonatype</id>
@@ -71,8 +71,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
+			<groupId>io.papermc.paper</groupId>
+			<artifactId>paper-api</artifactId>
 			<version>1.19.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
