added "todo" command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,11 +15,14 @@ softdepend:
 
 commands:
   me:
-    usage: ' ꀑ §cИспользуй: /<command> [сообщение]'
-    description: Проигрывает событие в чате в заданом радиусе
+    usage: ' ꀑ §cИспользуй: /<command> [действие]'
+    description: Проигрывает действие в чате в заданом радиусе
+  todo:
+    usage: ' ꀑ §cИспользуй: /<command> [речь] * [действие]'
+    description: Проигрывает, в заданом радиусе, действие и речь в чате
   try:
-    usage: ' ꀑ §cИспользуй: /<command> [сообщение]'
-    description: Рандомно определяет исход события и проигрывает его в заданом радиусе
+    usage: ' ꀑ §cИспользуй: /<command> [действие]'
+    description: Рандомно определяет исход действия и проигрывает его в заданом радиусе
   spit:
     usage: ' ꀑ §cИспользуй: /<command>'
     description: Покажи свою дерзость и плюнь кому то в ебло
