--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,19 +24,19 @@ commands:
     usage: ' ꀑ §cИспользуй: /<command> [действие]'
     description: Рандомно определяет исход действия и проигрывает его в заданом радиусе
   spit:
-    usage: ' ꀑ §cИспользуй: /<command>'
+    usage: ' ꀑ §cИспользуй: /<command> [речь]'
     description: Покажи свою дерзость и плюнь кому то в ебло
   fart:
-    usage: ' ꀑ §cИспользуй: /<command>'
+    usage: ' ꀑ §cИспользуй: /<command> [речь]'
     description: Пердани вкусно на публику
   sit:
-    usage: ' ꀑ §cИспользуй: /<command>'
+    usage: ' ꀑ §cИспользуй: /<command> [речь]'
     aliases: [ sit, s ]
     description: Сядь на картаны и порви жопу
   mute:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [время] [причина]'
     permission: msUtils.mute
-    description: Замутить игрока
+    description: Покажи кто тут главный и замьють игрока
   privatemessage:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [сообщение]'
     aliases: [ privatemessage, pm, w, tell, msg ]
@@ -44,11 +44,11 @@ commands:
   unmute:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname]'
     permission: msUtils.mute
-    description: Размутить игрока
+    description: Размьютить игрока
   ban:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [время] [причина]'
     permission: msUtils.ban
-    description: Забанить игрока
+    description: Покажи кто тут главный и забань игрока
   unban:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname]'
     permission: msUtils.ban
@@ -60,7 +60,7 @@ commands:
   getmaploc:
     usage: ' ꀑ §cИспользуй: /<command>'
     permission: msUtils.mapLocation
-    description: Добывает координаты карты находящейся в руке
+    description: Добывает координаты карты, находящейся в руке
   resourcepack:
     usage: ' ꀑ §cИспользуй: /<command>'
     aliases: [ resourcepack, rp ]
@@ -76,7 +76,7 @@ commands:
   whitelist:
     usage: ' ꀑ §cИспользуй: /<command> [add/remove/reload] [ID/Nickname]'
     permission: msUtils.whitelist
-    description: Удаляет/добавляет игрока в вайтлист
+    description: Удаляет/добавляет игрока в вайтлист, или перезагружает его
   teleporttolastdeathlocation:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname]'
     aliases: [ teleporttolastdeathlocation, teleporttolastdeathloc, tptolastdeathlocation, tptolastdeathloc, tptolastdeath ]
@@ -86,7 +86,7 @@ commands:
     usage: ' ꀑ §cИспользуй: /<command> [ID/Nickname] [world name] [x] [y] [z]'
     aliases: [ worldteleport, worldtp, wtp, teleportworld, tpworld, tpw ]
     permission: msUtils.worldteleport
-    description: Телепортирует игрока на координаты в указаном мире
+    description: Телепортирует игрока на координаты в указаном мире, если координаты не указаны, телепортирует на точку спавна данного мира
 
 permissions:
   msUtils.info:
