added "it" command, added empty Tab completer

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,6 +23,9 @@ commands:
   try:
     usage: ' ꀑ §cИспользуй: /<command> [действие]'
     description: Рандомно определяет исход действия и проигрывает его в заданом радиусе
+  it:
+    usage: ' ꀑ §cИспользуй: /<command> [действие]'
+    description: Проигрывает действие в чате в заданом радиусе, от третьего лица
   spit:
     usage: ' ꀑ §cИспользуй: /<command> [речь]'
     description: Покажи свою дерзость и плюнь кому то в ебло
