added do command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,16 +16,19 @@ softdepend:
 commands:
   me:
     usage: ' ꀑ §cИспользуй: /<command> [действие]'
-    description: Проигрывает действие в чате в заданом радиусе
+    description: Описывает, что делает ваш персонаж
   todo:
     usage: ' ꀑ §cИспользуй: /<command> [речь] * [действие]'
-    description: Проигрывает, в заданом радиусе, действие и речь в чате
+    description: Описывает действие и речь в чате
   try:
     usage: ' ꀑ §cИспользуй: /<command> [действие]'
-    description: Рандомно определяет исход действия и проигрывает его в заданом радиусе
+    description: Рандомно определяет исход того, что делает ваш персонаж
+  do:
+    usage: ' ꀑ §cИспользуй: /<command> [действие]'
+    description: Описывает состояние вашего персонажа и объектов вокруг вас
   it:
     usage: ' ꀑ §cИспользуй: /<command> [действие]'
-    description: Проигрывает действие в чате в заданом радиусе, от третьего лица
+    description: Описывает действие, от третьего лица
   spit:
     usage: ' ꀑ §cИспользуй: /<command> [речь]'
     description: Покажи свою дерзость и плюнь кому то в ебло
