--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	</developers>
 
 	<properties>
-		<authors>Poloskun_, PackmanDude</authors>
+		<authors>[Poloskun_, PackmanDude]</authors>
 		<mainClass>com.github.minersstudios.msUtils.Main</mainClass>
 		<apiVersion>1.19</apiVersion>
 		<java.version>17</java.version>
@@ -67,17 +67,16 @@
 			<url>https://repo.papermc.io/repository/maven-public/</url>
 		</repository>
 		<repository>
+			<id>codemc-repo</id>
+			<url>https://repo.codemc.org/repository/maven-public/</url>
+		</repository>
+		<repository>
 			<id>sonatype</id>
 			<url>https://oss.sonatype.org/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>dmulloy2-repo</id>
 			<url>https://repo.dmulloy2.net/repository/public/</url>
-		</repository>
-		<repository>
-			<id>dv8tion</id>
-			<name>m2-dv8tion</name>
-			<url>https://m2.dv8tion.net/releases</url>
 		</repository>
 		<repository>
 			<id>Scarsz-Nexus</id>
@@ -107,7 +106,7 @@
 		<dependency>
 			<groupId>com.discordsrv</groupId>
 			<artifactId>discordsrv</artifactId>
-			<version>1.25.1</version>
+			<version>1.26.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
