--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,19 +1,13 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI with Maven
-
 on:
   push:
     branches: [ "release" ]
   pull_request:
     branches: [ "release" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
