--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.github.minersstudios</groupId>
 	<artifactId>msUtils</artifactId>
-	<version>1.1.0</version>
+	<version>1.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>msUtils</name>
@@ -31,7 +31,7 @@
 
 	<properties>
 		<authors>[Poloskun_, PackmanDude]</authors>
-		<mainClass>com.github.minersstudios.msutils.Main</mainClass>
+		<mainClass>com.github.minersstudios.msutils.MSUtils</mainClass>
 		<apiVersion>1.19</apiVersion>
 		<java.version>17</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -115,21 +115,15 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.MinersStudios</groupId>
-			<artifactId>msDecor</artifactId>
-			<version>release-b66ae999ad-1</version>
+			<groupId>com.github.LeonMangler</groupId>
+			<artifactId>SuperVanish</artifactId>
+			<version>6.2.6-4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.MinersStudios</groupId>
-			<artifactId>msBlock</artifactId>
-			<version>release-1a84d43a55-1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.MinersStudios</groupId>
-			<artifactId>msItems</artifactId>
-			<version>release-4ed7c0bb6b-1</version>
+			<artifactId>msCore</artifactId>
+			<version>release-6fe29fe16a-1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
