--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,12 +7,10 @@ website: ${url}
 main: ${mainClass}
 api-version: ${apiVersion}
 softdepend:
+  - msCore
   - AuthMe
   - ProtocolLib
   - DiscordSRV
-  - msDecor
-  - msBlock
-  - msItems
 
 commands:
   msutils:
@@ -36,16 +34,16 @@ commands:
     description: Описывает действие, от третьего лица
   spit:
     usage: " ꀑ §cИспользуй: /<command> [речь]"
-    description: Покажи свою дерзость и плюнь кому то в ебло
+    description: Покажи свою дерзость и плюнь кому-то в лицо
   fart:
     usage: " ꀑ §cИспользуй: /<command> [речь]"
-    description: Пердани вкусно на публику
+    description: Пукни вкусно на публику
   sit:
     usage: " ꀑ §cИспользуй: /<command> [речь]"
     aliases: [ sit, s ]
     description: Сядь на картаны и порви жопу
   mute:
-    usage: " ꀑ §cИспользуй: /<command> [ID/Nickname] [время] [причина]"
+    usage: " ꀑ §cИспользуй: /<command> [ID/Nickname] [время][s/m/h/d/M/y] [причина]"
     permission: msUtils.mute
     description: Покажи кто тут главный и замьють игрока
   privatemessage:
@@ -57,7 +55,7 @@ commands:
     permission: msUtils.mute
     description: Размьютить игрока
   ban:
-    usage: " ꀑ §cИспользуй: /<command> [ID/Nickname] [время] [причина]"
+    usage: " ꀑ §cИспользуй: /<command> [ID/Nickname] [время][s/m/h/d/M/y] [причина]"
     permission: msUtils.ban
     description: Покажи кто тут главный и забань игрока
   unban:
