--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.github.minersstudios</groupId>
 	<artifactId>msUtils</artifactId>
-	<version>1.3.0</version>
+	<version>1.3.1</version>
 	<packaging>jar</packaging>
 
 	<name>msUtils</name>
@@ -121,9 +121,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.MinersStudios</groupId>
+			<groupId>com.github.MinersStudios.msCore</groupId>
 			<artifactId>msCore</artifactId>
-			<version>release-6fe29fe16a-1</version>
+			<version>release-4abdc9ab8a-1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
