--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.github.minersstudios</groupId>
 	<artifactId>msUtils</artifactId>
-	<version>1.3.2</version>
+	<version>1.4.0</version>
 	<packaging>jar</packaging>
 
 	<name>msUtils</name>
@@ -115,9 +115,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.MinersStudios.msCore</groupId>
+			<groupId>com.github.MinersStudios</groupId>
 			<artifactId>msCore</artifactId>
-			<version>release-d683973f21-1</version>
+			<version>release-64f814ba4d-1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
