--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>bytecode.space</id>
+			<url>https://repo.bytecode.space/repository/maven-public/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -47,6 +54,19 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>ca.bkaw</groupId>
+				<artifactId>paper-nms-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<executions>
+					<execution>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>remap</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<resources>
@@ -65,6 +85,10 @@
 		<repository>
 			<id>papermc</id>
 			<url>https://repo.papermc.io/repository/maven-public/</url>
+		</repository>
+		<repository>
+			<id>paper-nms</id>
+			<url>https://github.com/p0loskun/maven-paper-nms/raw/main</url>
 		</repository>
 		<repository>
 			<id>codemc-repo</id>
@@ -97,6 +121,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>ca.bkaw</groupId>
+			<artifactId>paper-nms</artifactId>
+			<version>1.19.4-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>fr.xephi</groupId>
 			<artifactId>authme</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
@@ -117,7 +147,7 @@
 		<dependency>
 			<groupId>com.github.MinersStudios</groupId>
 			<artifactId>msCore</artifactId>
-			<version>release-64f814ba4d-1</version>
+			<version>release-a1ce28be34-1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
