--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <properties>
         <authors>[Poloskun_, PackmanDude]</authors>
         <mainClass>com.github.minersstudios.msutils.MSUtils</mainClass>
-        <apiVersion>1.19</apiVersion>
+        <apiVersion>'1.20'</apiVersion>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -121,13 +121,13 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19.4-R0.1-SNAPSHOT</version>
+            <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-mojangapi</artifactId>
-            <version>1.19.4-R0.1-SNAPSHOT</version>
+            <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>ca.bkaw</groupId>
             <artifactId>paper-nms</artifactId>
-            <version>1.19.4-SNAPSHOT</version>
+            <version>1.20.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>com.github.MinersStudios</groupId>
             <artifactId>msCore</artifactId>
-            <version>release-8a41181fdf-1</version>
+            <version>release-f51ea77fba-1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
